styling update - replaced blue coloor to a darker one"

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary: #ff2d55;
     --secondary: #9c0a26;
-    --blue: #00c7be;
+    --blue: #00639a;
     --dark: #5e0a0a;
     --light: #f5f5dc;
     --black: #000;
