game.html update - added data attributes and move arrows under main grid instead

--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,9 @@ body > div,
 .obstacle {
     background-color: var(--black);
 }
+
+.arrows {
+    text-align: center;
+    padding: 1rem;
+    align-content: center;
+}
