add event listener for arrow buttons on screen and keyboard

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
 body {
     width: var(--FW);
     height: var(--FH);
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,14 +22,13 @@ body {
 }
 
 body > div,
-.helpers {
+.game-grids-container > div {
     margin: 1em;
 }
 
 .game-grids-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .main-grid,
@@ -52,6 +53,13 @@ body > div,
 
 .obstacle {
     background-color: var(--black);
+}
+
+.helpers {
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .arrows {
