update styling for general and modals, colors and text-transform

--- a/css/modal-style.css
+++ b/css/modal-style.css
@@ -5,7 +5,15 @@ div.modal {
     margin: 2rem;
 }
 
-.modal-header,
+.modal-header{
+    padding: 10px;
+}
+
+.close {
+    border: 0;
+    background-color: transparent;
+}
+
 .modal-body {
     padding: 1rem;
 }
