--- a/css/modal-style.css
+++ b/css/modal-style.css
@@ -3,6 +3,7 @@ div.modal {
     border: solid 2px var(--black);
     box-shadow: 20px 20px var(--primary);
     margin: 2rem;
+    z-index: 2; /* bring modal forward */
 }
 
 .modal-header{
@@ -26,4 +27,8 @@ div.modal {
 
 .modal-body > div:not(.modal-rules) {
     text-align: center;
+}
+
+.hide {
+    display: none;
 }
