--- a/css/modal-style.css
+++ b/css/modal-style.css
@@ -1,34 +1,46 @@
+div#modal-container {
+	width: var(--FW);
+	height: var(--FH);
+	position: absolute;
+    align-content: center;
+    justify-items: center;
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
 div.modal {
-    width: 40%;
-    border: solid 2px var(--black);
-    box-shadow: 20px 20px var(--primary);
-    margin: 2rem;
-    z-index: 2; /* bring modal forward */
-}
-
-.modal-header{
-    padding: 10px;
-}
-
-.close {
-    border: 0;
-    background-color: transparent;
-}
-
-.modal-body {
-    padding: 1rem;
+	max-width: 50%;
+	height: fit-content;
+	background-color: var(--white);
+	border: solid 2px var(--black);
+	box-shadow: 20px 20px var(--primary);
+	margin: 2rem;
+	z-index: 2; /* bring modal forward */
+    text-align: justify;
 }
 
 .modal-header {
-    border-bottom: solid 2px var(--black);
-    display: flex;
-    justify-content: space-between;
+	padding: .5rem 1rem;
+}
+
+.close {
+	border: 0;
+	background-color: transparent;
+}
+
+.modal-body {
+	padding: 1rem;
+}
+
+.modal-header {
+	border-bottom: solid 2px var(--black);
+	display: flex;
+	justify-content: space-between;
 }
 
 .modal-body > div:not(.modal-rules) {
-    text-align: center;
+	text-align: center;
 }
 
 .hide {
-    display: none;
+	display: none;
 }
