--- a/css/main-style.css
+++ b/css/main-style.css
@@ -50,3 +50,8 @@ button:not(.close) {
 	text-transform: uppercase;
 	padding: 0.5rem 1rem;
 }
+
+footer {
+    position: absolute;
+    bottom: 1rem;
+}
