--- a/css/game-style.css
+++ b/css/game-style.css
@@ -1,85 +1,91 @@
 .counters {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 body > div,
 .game-grids-container > div {
-	margin: 0.5rem;
+    margin: 0.5rem;
 }
 
 .game-grids-container {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .main-grid,
 .secondary-grid {
-	display: flex;
-	flex-wrap: wrap;
-	width: max-content;
-	justify-content: center; /* align board center horizontally */
-	border: 1px solid var(--blue);
-	max-width: 380px;
+    display: flex;
+    flex-wrap: wrap;
+    width: max-content;
+    justify-content: center; /* align board center horizontally */
+    border: 1px solid var(--blue);
+    max-width: 380px;
 }
 
 /* Suggested to make it different so player is not confused */
 .secondary-grid {
-	filter: grayscale(1);
+    filter: grayscale(1);
 }
 
 .sqr {
-	width: 70px;
-	aspect-ratio: 1/1;
-	border: 3px outset var(--blue);
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    width: 70px;
+    aspect-ratio: 1/1;
+    border: 3px outset var(--blue);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .obstacle {
-	background-color: var(--blue);
-	width: 70px;
-	height: 70px;
+    background-color: var(--blue);
+    width: 70px;
+    height: 70px;
 }
 
 .player,
 .goal {
-	font-size: 2rem;
+    font-size: 2rem;
 }
 
 .goal {
-	color: var(--primary);
-	background-color: var(--secondary);
+    color: var(--primary);
+    background-color: var(--secondary);
 }
 
 .goal.won {
-	color: var(--blue);
-	background-color: var(--green);
+    color: var(--blue);
+    background-color: var(--green);
 }
 
 .helpers {
-	height: 380px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .helper {
-	margin: 1rem 0.5rem;
-	min-width: 70px;
-	min-height: 70px;
-	background-color: transparent;
-	border: 0;
+    margin: 1rem 0.5rem;
+    min-width: 70px;
+    min-height: 70px;
+    background-color: transparent;
+    border: 0;
 }
 
 .helper:hover {
-	cursor: pointer;
-	filter: drop-shadow(2px 4px var(--primary));
+    cursor: pointer;
+    filter: drop-shadow(2px 4px var(--primary));
 }
 
 .arrows {
-	text-align: center;
-	padding: 1rem;
-	align-content: center;
+    text-align: center;
+    padding: 1rem;
+    margin-top: 1rem;
+    align-content: center;
+}
+
+.arrow.hover > img {
+    cursor: pointer;
+    filter: brightness(0.7);
 }
