--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,64 +1,72 @@
 @font-face {
-	font-family: "Jersey 10";
-	src: url(../assets/fonts/Jersey10-Regular.ttf);
+    font-family: "Jersey 10";
+    src: url(../assets/fonts/Jersey10-Regular.ttf);
 }
 
 @font-face {
-	font-family: "Pixelify Sans";
-	src: url(../assets/fonts/PixelifySans-VariableFont_wght.ttf);
+    font-family: "Pixelify Sans";
+    src: url(../assets/fonts/PixelifySans-VariableFont_wght.ttf);
 }
 
 :root {
-	--primary: #ff2d55;
-	--secondary: #9c0a26;
-	--blue: #00639a;
-	--green: #5ce65c;
-	--dark: #5e0a0a;
-	--light: #f5f5dc;
-	--black: #000;
-	--white: #fff;
-	--FW: 100vw; /* set to full-width */
-	--FH: 100vh; /* set to full-height */
+    --primary: #ff2d55;
+    --secondary: #9c0a26;
+    --blue: #00639a;
+    --green: #5ce65c;
+    --dark: #5e0a0a;
+    --light: #f5f5dc;
+    --black: #000;
+    --white: #fff;
+    --FW: 100vw; /* set to full-width */
+    --FH: 100vh; /* set to full-height */
 }
 
 body {
-	width: var(--FW);
-	height: var(--FH);
-	margin: 0;
-	padding: 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	font-family: "Jersey 10", sans-serif;
-	background-color: var(--light);
+    width: var(--FW);
+    height: var(--FH);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: "Jersey 10", sans-serif;
+    background-color: var(--light);
 }
 
 h1 {
-	font-family: "Pixelify Sans", sans-serif;
-	text-transform: uppercase;
-	font-size: 4rem;
-	margin: 0;
+    font-family: "Pixelify Sans", sans-serif;
+    text-transform: uppercase;
+    font-size: 4rem;
+    margin: 0 0 2rem;
 }
 
 p {
-	margin: 0;
-	font-size: 1rem;
+    margin: 0;
+    font-size: 1rem;
 }
 
 button {
-	padding: 0;
-	border: 0;
-	font-family: "Jersey 10", sans-serif;
-	text-transform: uppercase;
+    padding: 0;
+    border: 0;
+    font-family: "Jersey 10", sans-serif;
+    text-transform: uppercase;
 }
 
-button:not(.close):not(.helper):hover > img {
-	cursor: pointer;
-	filter: brightness(0.7);
+button:not(.close):not(.helper):hover > img,
+button:hover.text {
+    cursor: pointer;
+    filter: brightness(0.7);
+}
+
+button.text {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    background-color: var(--primary);
+    color: var(--light);
 }
 
 footer {
-	position: absolute;
-	bottom: 1rem;
+    position: absolute;
+    bottom: 1rem;
 }
