--- a/css/modal-style.css
+++ b/css/modal-style.css
@@ -1,52 +1,63 @@
 div#modal-container {
-	width: var(--FW);
-	height: var(--FH);
-	position: absolute;
-	align-content: center;
-	justify-items: center;
-	background-color: rgba(0, 0, 0, 0.8);
+    width: var(--FW);
+    height: var(--FH);
+    position: absolute;
+    align-content: center;
+    justify-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 div.modal {
     min-width: 30%;
-	max-width: 50%;
-	height: fit-content;
-	background-color: var(--white);
-	border: solid 2px var(--black);
-	box-shadow: 20px 20px var(--primary);
-	margin: 2rem;
-	z-index: 2; /* bring modal forward */
-	text-align: justify;
+    max-width: 50%;
+    height: fit-content;
+    background-color: var(--white);
+    border: solid 2px var(--black);
+    box-shadow: 20px 20px var(--primary);
+    margin: 2rem;
+    z-index: 2; /* bring modal forward */
+    text-align: justify;
 }
 
 .modal-header {
-	padding: 0.7rem 1rem;
+    padding: 0.7rem 1rem;
 }
 
 .close {
-	background-color: transparent;
-	display: flex; /* removing unnecessary bottom space */
+    background-color: transparent;
+    display: flex; /* removing unnecessary bottom space */
 }
 
 .close:hover {
-	cursor: pointer;
-	color: var(--primary);
+    cursor: pointer;
+    color: var(--primary);
 }
 
 .modal-body {
-	padding: 1rem;
+    padding: 1rem;
 }
 
 .modal-header {
-	border-bottom: solid 2px var(--black);
-	display: flex;
-	justify-content: space-between;
+    border-bottom: solid 2px var(--black);
+    display: flex;
+    justify-content: space-between;
 }
 
 .modal-body > div:not(.modal-rules) {
-	text-align: center;
+    text-align: center;
+}
+
+.modal-ans {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+    justify-content: center;
+}
+
+.modal-ans button.text {
+    min-width: 100px;
 }
 
 .hide {
-	display: none;
+    display: none;
 }
